--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,16 +6,29 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive='active'><a routerLink='/recipes'>Recipes</a></li>
-        <li routerLinkActive="active"><a routerLink="/auth">Authenticate</a></li>
+        <li routerLinkActive='active'>
+          <a
+            routerLink='/recipes'
+            *ngIf="isAuthenticated"
+            >
+            Recipes</a></li>
+        <li routerLinkActive="active">
+          <a
+            routerLink="/auth"
+            *ngIf="!isAuthenticated"
+            >
+            Authenticate</a></li>
         <li routerLinkActive='active'><a routerLink='/shopping-list'>Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li>
+          <a style="cursor: pointer;" *ngIf="isAuthenticated" (click)="onLogOut()">Logout</a>
+        </li>
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a style="cursor: pointer;"   class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li style="cursor: pointer;"><a (click)="onSaveData()">Save Data</a></li>
-            <li style="cursor: pointer;"><a (click)="onFetchData()">Fetch Data</a></li>
+            <li style="cursor: pointer;"><a (click)="onSaveData()">{{saveBtnTxt}}</a></li>
+            <li style="cursor: pointer;"><a (click)="onFetchData()">{{fetchBtnTxt}}</a></li>
           </ul>
         </li>
       </ul>
